# nes

./: .gitignore  CMakeLists.txt  README.md  build_emscripten.sh
6502-tests/hmc-6502/roms/: test00-loadstore.rom  test05-reginstrs.rom  test06-addsub.rom  test07-cmpbeqbne.rom  test08-cpxybit.rom  test09-otherbranches.rom  test10-flaginstrs.rom  test11-stackinstrs.rom  test12-rti.rom  test13-specialflags.rom  test14-brk.rom
include/: bus.h  cartridge.h  common.h  font.h  format.h  frontend.h  gfx.h  log.h  main.h  mapper.h  ppu.h  r6502.h
src/: bus.cpp  cartridge.cpp  font.cpp  format.cpp  frontend.cpp  gfx.cpp  main.cpp  ppu.cpp  r6502.cpp  test_r6502.cpp
www/: index.html
